--- a/Code 15- Media Queries and Responsiveness/index.html
+++ b/Code 15- Media Queries and Responsiveness/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- <nav>
         <ul> -->
-<!-- Below a href we used to crate the link only -->
+<!-- Below a href we used to create the link only -->
             <!-- <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
